--- a/Web/Areas/Hub/Views/ReceiveNew/Commodities.cshtml
+++ b/Web/Areas/Hub/Views/ReceiveNew/Commodities.cshtml
@@ -17,6 +17,9 @@
             <div class="caption font-green-sharp"><i class="fa fa-list font-green-sharp"></i> @Html.Translate("Commodities Detail")</div>
             <div class="tools"><a href="#" class="collapse" data-original-title="" title=""></a></div>
             <div class="actions">
+                @*  columns.Bound(d => d.GRN).ClientTemplate("<a href='" + @Url.Action("Create", "ReceiveNew", new { @receiptAllocationId = "\\#=ReceiveID\\#", @GRN = "\\#=GRN\\#" }) + "'>\\#:GRN\\#</a> &nbsp; ");*@
+
+                <a class="btn grey-salt " href='@Url.Action("Create", "ReceiveNew", new { @receiptAllocationId = Request.QueryString["receiveId"], @GRN= Request.QueryString["GRN"] })' data-buttontype="btn_back_to_list"><i class="fa fa-list"></i> @Html.Translate("Back to list")</a>
                 <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
             </div>
         </div>
@@ -27,10 +30,13 @@
                     {
                         columns.ForeignKey(p => p.CommodityId, (IEnumerable<Cats.Models.Hubs.CommodityModel>)ViewBag.Commodities, "Id", "Name").EditorTemplateName("CommodityEditor").Width(150).Title(Html.Translate("Commodity"));
                         //columns.ForeignKey(p => p.SiNumber, (IEnumerable<Cats.Models.Hubs.ViewModels.ShippingInstructionModel>)ViewBag.SI, "Id", "Value").EditorTemplateName("SIEditor").Width(150).Title(Html.Translate("SI Number"));
+                        columns.ForeignKey(p => p.CommodityChildID, (IEnumerable<Cats.Models.Hubs.SubCommodity>)ViewBag.SubCommodities, "Id", "Name").EditorTemplateName("CommodityChildEditor").Width(150).Title(Html.Translate("Sub Commodity"));
+                        //columns.ForeignKey(p => p.CommodityId, (IEnumerable<Cats.Models.Hubs.CommodityModel>)ViewBag.SubCommodities, "Id", "Name").EditorTemplateName("SubCommoditiesEditor").Width(150).Title(Html.Translate("Commodity"));
+                        // columns.Bound(p => p.CommodityChildID).Width(100);
                         columns.Bound(p => p.Description).Width(100);
-                        columns.ForeignKey(p => p.UnitId, (IEnumerable<Cats.Models.Hubs.UnitModel>)ViewBag.Units, "Id", "Name").EditorTemplateName("UnitEditor").Width(150);
+                        columns.ForeignKey(p => p.UnitId, (IEnumerable<Cats.Models.Hubs.UnitModel>)ViewBag.Units, "Id", "Name").EditorTemplateName("UnitEditor").Width(80);
                         //columns.ForeignKey(p => p.UnitId, Model.Units, "UnitID", "Name").Title(Html.Translate("Units"));
-                        //columns.Bound(p => p.CommodityId).Title(Html.Translate("Commodity ID")).Width(150);
+                        //  columns.Bound(p => p.CommodityId).Title(Html.Translate("Commodity ID")).Width(150);
                         columns.Bound(p => p.SentQuantityInUnit).Width(100);
                         columns.Bound(p => p.SentQuantityInMt).Width(100);
                         columns.Bound(p => p.ReceivedQuantityInUnit).Width(100);
@@ -39,8 +45,10 @@
                         //columns.Bound(p => p.ReceiveDetailsId).ClientTemplate("<input name = 'ReceiveDetailsId' value='<#= ReceiveDetailsId #>'/>").Width(100);//.Hidden(true);
                         //columns.Command(command => { command.Edit(); command.Destroy(); });
                     })
-                            .ToolBar(toolbar => { toolbar.Create();
-                                                    toolbar.Save();
+                            .ToolBar(toolbar =>
+                            {
+                                toolbar.Create();
+                                toolbar.Save();
                             })
                             .Editable(editable => editable.Mode(Kendo.Mvc.UI.GridEditMode.InCell))
                     .Pageable()
@@ -52,8 +60,8 @@
                         .PageSize(20)
                         .Events(events => events.Error("error_handler"))
                         .Model(model => model.Id(p => p.ReceiveDetailsId))
-                                               .Create(update => update.Action("CreateCommoditiesFromReceive", "ReceiveNew", new {@ViewBag.receiveId }))
-                                    .Read(read => read.Action("ReadCommoditiesFromReceive", "ReceiveNew", new {@ViewBag.receiveId }))
+                                               .Create(update => update.Action("CreateCommoditiesFromReceive", "ReceiveNew", new { @ViewBag.receiveId }))
+                                    .Read(read => read.Action("ReadCommoditiesFromReceive", "ReceiveNew", new { @ViewBag.receiveId }))
                                             .Update(update => update.Action("CreateCommoditiesFromReceive", "ReceiveNew", new { @ViewBag.receiveId }))
                     //.Destroy(update => update.Action("ReceiveDetails_Destroy", "ReceiveNew"))
                     )
@@ -76,4 +84,3 @@
         </div>
     </div>
 </div>
-
