H.1.3.1 CATS-1342 Unnecessary characters confusing users are removed

--- a/Web/Areas/Logistics/Views/DispatchAllocation/Index.cshtml
+++ b/Web/Areas/Logistics/Views/DispatchAllocation/Index.cshtml
@@ -38,12 +38,12 @@
 
                     <li>@Html.LogisticsOperationButton(
                                                 @Url.Action("Hub", "DispatchAllocation", new { regionid = ViewBag.regionId }),
-                                               LogisticsConstants.Operation.Hub_allocation, @Html.Translate("Hub allocation"));</li>
+                                               LogisticsConstants.Operation.Hub_allocation, @Html.Translate("Hub allocation"))</li>
                     @*<li><a class="btn green-haze-stripe" href="@Url.Action("Hub", "DispatchAllocation", new {regionid = ViewBag.regionId})">@Html.Translate("Hub allocation")</a></li>*@
                     <!--<li><a class="btn green-haze-stripe" href="@Url.Action("Index", "SIAllocation", new {Area = "Logistics", regionid = ViewBag.regionId})">PC/SI code allocation</a></li>-->
                      <li>@Html.LogisticsOperationButton(
                                                 @Url.Action("CreateTransportRequisition", "TransportRequisition", new { regionId = ViewBag.regionId }),
-                                               LogisticsConstants.Operation.Generate_transport_requisition, @Html.Translate("Generate Transport Requisition"));</li>
+                                               LogisticsConstants.Operation.Generate_transport_requisition, @Html.Translate("Generate Transport Requisition"))</li>
                    @* <li><a class="btn green-haze-stripe" href="@Url.Action("CreateTransportRequisition", "TransportRequisition", new {regionId = ViewBag.regionId})">@Html.Translate("Generate Transport Requisition"),</a></li>*@
                 </ul>
             </div>
