Fixed a bug on Ethiopian calender where dropdown was visible for a readonly input textbox.

--- a/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
+++ b/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
@@ -133,7 +133,7 @@
                                 }
                                 else
                                 {
-                                    @Html.TextBoxFor(model => model.ReceiptDate, new { @readonly = true, @class = "form-control" })
+                                    @Html.TextBoxFor(model => model.ReceiptDate, new { @readonly = true, @class = "form-control cats-datepicker2" })
 
                                 }
                                 <span class="help-block">@Html.ValidationMessageFor(model => model.ReceiptDate)</span>
