--- a/Web/Areas/Logistics/Views/FDPSIAllocation/Index.cshtml
+++ b/Web/Areas/Logistics/Views/FDPSIAllocation/Index.cshtml
@@ -108,7 +108,7 @@
                 </div>
                 <div class="portlet-body">
                     <div class="accordion dd-item" id="accordion_zone">
-                        <div class="accordion-group" id="accordion_zone{{$index}}" data-index="{{zone.id}}" ng-repeat="zone in requests" class="btn-draggable" ng-model="unallocated" data-drag="zone.allocatedAmount<0.1"
+                        <div class="accordion-group" id="accordion_zone{{$index}}" data-index="{{zone.id}}" ng-repeat="zone in requests" class="btn-draggable" ng-model="unallocated" data-drag="zone.allocatedAmount< 0.1"
                              data-jqyoui-options="{revert: 'invalid'}" jqyoui-draggable="{index: {{zone.id}},placeholder:'keep',animate:true, onStart:'startCallback(zone, $index)', onStop: 'stopCallback', onDrag: 'dragCallback'}" ng-cloak>
 
                             <div class="dd-handle accordion-heading">
@@ -116,7 +116,8 @@
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_zone" href="#collapse_zone{{zone.zoneId}}">
                                     <i class="icon-move icon-align-right"></i><span> {{zone.name}} [{{zone.allocatedAmount | number:2}} of {{zone.requestedAmount | number:2}}]</span>
                                 </a>
-                                <div style="margin: auto; text-align: center;">
+                                <div style="margin: auto; text-align: center; 
+position:absolute; ">
                                     <button ng-show="zone.allocatedAmount==zone.requestedAmount && saved==1" ng-click="on_Allocation_Done(zone.id)" class="btn btn-mini btn-primary"><i class="icon-ok"></i>@Html.Translate("Commit")</button>
 
                                 </div>
@@ -320,6 +321,7 @@
         $scope.CustomAmount = 0;
         $scope.allocations = { "si001": [], "si002": [] };
         $scope.EditLocation=[];
+        $scope.TopEditLocation=[];
         $scope.list5 = [
 
         ];
@@ -375,15 +377,18 @@
                 $scope.allocateCustomAdminRegion(location,$scope.siindexG/1 + 1,CustomAmount);
                 $scope.calculateAllocated();
             }
-            else if($scope.modalFor ==1)
+            else if($scope.modalFor ===1)
             {
                 $scope.showAmountModal= !$scope.showAmountModal;
                 var adjustedallocatedAmount = $scope.EditLocation.allocatedAmount - CustomAmount;
-                $scope.EditLocation.totalAllocatedAmount= ($scope.EditLocation.totalAllocatedAmount-  $scope.EditLocation.allocatedAmount) + CustomAmount;
+                //$scope.EditLocation.totalAllocatedAmount= ($scope.EditLocation.totalAllocatedAmount-  $scope.EditLocation.allocatedAmount) + CustomAmount;
+                $scope.TopEditLocation.totalAllocatedAmount= ($scope.TopEditLocation.totalAllocatedAmount-  $scope.EditLocation.allocatedAmount) + CustomAmount;
                 $scope.EditLocation.allocatedAmount= CustomAmount;
-
+                
                 $scope.EditLocation.Allocations[0].AllocatedAmount= CustomAmount;
                 $scope.SIPCCodes[$scope.siindexG].availableAmount = $scope.SIPCCodes[$scope.siindexG].availableAmount  + adjustedallocatedAmount ;
+                if(CustomAmount===0)
+                    $scope.clearSIPCAllocation();// $scope.SIPCCodes[si].allocatedRequests.splice(i, 1);
                 $scope.calculateAllocated();
                 $scope.clearSIPCAllocation();
 
@@ -400,7 +405,7 @@
                     }
 
                 }
-                
+                $scope.TopEditLocation = $scope.allAdminRegions[index];
                 if (angular.isUndefined(exactLocation))
                     var location = $scope.allAdminRegions[index];
                 else
@@ -538,7 +543,7 @@
         $scope.allocateCustomAdminRegion = function (location,index, customAmount) {
             if (location.type == "zone") {
                 for (var w in location.woredas) {
-                    $scope.allocateCustomAdminRegion(location.woredas[w],index);
+                    c(location.woredas[w],index);
                 }
             }
             else if (location.type == "woreda") {
@@ -754,6 +759,7 @@
         }
         $scope.assigneAllocation = function (requestIndex, siIndex, amount) {
             // alert(requestIndex + "," + siIndex);
+            $scope.clearSIPCAllocation();
             $scope.saved=0;
             var location = $scope.allAdminRegions[requestIndex];
             amount = location.requestedAmount - location.totalAllocatedAmount;
@@ -786,7 +792,7 @@
                 }
                 else
 
-                    alert(" Selected FDP has been allocated  from  " +   $scope.SIPCCodes[siIndex].Code + " Number");
+                    alert(" Selected FDP has been allocated  from  " +   $scope.SIPCCodes[siIndex].name + " SI Number");
             }
 
 
@@ -801,6 +807,8 @@
             $scope.allocateCustomAdminRegion(location,siIndex/1 + 1,amount);
             }
             $scope.calculateAllocated();
+                //Duplicate remove
+            $scope.clearSIPCAllocation();
             }
 
 
